Cleaned up code; removed unnecessary local variables; added comments